force-app/main/default/objects/PGFSection__c/PGFSection__c.object-meta.xml
<CustomObject>
    <description>Section metadata object for framework.</description>
    <label>Section</label>
    <nameField>
        <label>FB_Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>