force-app/main/default/objects/PGFSection__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <formula>Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>