force-app/main/default/objects/PGFSection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Parent__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>ParentName__c</columns>
    <columns>Page_Id__c</columns>
    <columns>Section_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>