force-app/main/default/objects/PGFSection__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>OrderNumber__c</columns>
    <columns>Parent__c</columns>
    <columns>ParentName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>